<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/container"
                style="@style/MatchMatch">

    <RelativeLayout
        android:id="@+id/camera_panel"
        style="@style/MatchMatch.Vertical">
        <cn.jhd.face.client.widget.view.FindFaceView
	        android:id="@+id/preview"
	        style="@style/MatchMatch"
	        app:orc_animTime="2000"
	        app:orc_rectWidth="600dp"
	        app:orc_rectHeight="780dp"
	        app:orc_borderColor="@android:color/white"
	        app:orc_borderSize="1dp"
	        app:orc_cornerColor="@color/primaryDark"
	        app:orc_cornerLength="20dp"
	        app:orc_cornerSize="3dp"
	        app:orc_customGridScanLineDrawable="@drawable/jhdview_default_grid_scan_line"
	        app:orc_isBarcode="false"
	        app:orc_isCenterVertical="true"
	        app:orc_isShowDefaultGridScanLineDrawable="true"
	        app:orc_isShowDefaultScanLineDrawable="true"
	        app:orc_isShowTipBackground="true"
	        app:orc_isShowTipTextAsSingleLine="false"
	        app:orc_isTipTextBelowRect="false"
	        app:orc_maskColor="#66000000"
	        app:orc_tipText="@string/default_face_tip"
	        app:orc_tipTextSize="16sp"
	        app:orc_scanLineColor="@color/primaryDark"
	        app:orc_topOffset="0dp"
	        app:orc_isMoveScanLine="false"/>

	    
	    <ImageButton android:id="@+id/rotatingBtn" 
	        android:src="@drawable/ic_rotating"
	        android:background="@drawable/btn_layer_bg" 
	        android:layout_width="64.0dip" 
	        android:layout_height="64.0dip"
	        android:layout_marginTop="20dip"
	        android:padding="8.0dip"
	        android:layout_centerHorizontal="true" />
	    
	    <ImageButton android:id="@+id/cameraBtn" 
	        android:src="@drawable/button_camera"
	        android:background="@drawable/btn_layer_bg" 
	        android:layout_width="72.0dip" 
	        android:layout_height="72.0dip"
	        android:layout_marginBottom="20dip"
	        android:padding="8.0dip"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/result_panel"
        style="@style/MatchMatch"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone">
	    <include layout="@layout/view_title_bar"/>
		    <LinearLayout
		        style="@style/MatchMatch"
		        android:orientation="vertical"
		        android:padding="10dp">
	        <ImageView 
	            android:id="@+id/result_avatar"
	            android:layout_width="148dp"
	            android:layout_height="206dp"
	            android:layout_gravity="center_horizontal"
	            android:background="@drawable/placeholder_h"/>
	        <ScrollView 
			    style="@style/MatchMatch" android:visibility="gone">
			    <LinearLayout
		        style="@style/MatchMatch"
		        android:orientation="vertical"
		        android:visibility="gone">
			        <LinearLayout 
			            style="@style/ItemLine"
			            android:layout_marginTop="15dp">
			            <TextView 
				            style="@style/WrapWrap"
				            android:text="@string/text_id"
				            android:textSize="22sp"
				            android:textColor="@color/color_999999"
				            android:textStyle="bold"/>
				        <EditText
				            android:id="@+id/etId" 
				            style="@style/MatchWrap"
				            android:textColor="@color/color_999999"
				            android:textSize="22sp"
				            android:textStyle="bold"/>
			        </LinearLayout>
			        <LinearLayout 
			            style="@style/ItemLine"
			            android:layout_marginTop="15dp">
			            <TextView 
				            style="@style/WrapWrap"
				            android:text="@string/text_name"
				            android:textSize="22sp"
				            android:textColor="@color/color_999999"
				            android:textStyle="bold"/>
				        <EditText
				            android:id="@+id/etName" 
				            style="@style/MatchWrap"
				            android:textColor="@color/color_999999"
				            android:textSize="22sp"
				            android:textStyle="bold"/>
			        </LinearLayout>
			        <LinearLayout 
			            style="@style/ItemLine">
			            <TextView 
				            style="@style/WrapWrap"
				            android:text="@string/text_gender"
				            android:textSize="22sp"
				            android:textColor="@color/color_999999"
				            android:textStyle="bold"/>
				        <RadioGroup
							android:id="@+id/radioGroup"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:layout_alignParentBottom="true"
					        android:clickable="true"
					        android:orientation="horizontal"
					        android:padding="3dp">
					        <RadioButton
				            android:id="@+id/rb_male"
				            style="@style/WrapWrap"
				            android:checked="true"
				            android:text="@string/male" 
				            android:textColor="@color/color_999999"/>
					        <RadioButton
				            android:id="@+id/rb_female"
				            style="@style/WrapWrap"
				            android:checked="true"
				            android:text="@string/female" 
				            android:textColor="@color/color_999999"/>
					        <RadioButton
				            android:id="@+id/rb_secret"
				            style="@style/WrapWrap"
				            android:checked="true"
				            android:text="@string/secret" 
				            android:textColor="@color/color_999999"/>
						</RadioGroup>
			        </LinearLayout>
			        
			        <LinearLayout 
			            style="@style/ItemLine">
			            <TextView 
				            style="@style/WrapWrap"
				            android:text="@string/text_unit"
				            android:textSize="22sp"
				            android:textColor="@color/color_999999"
				            android:textStyle="bold"/>
				        <EditText
				            android:id="@+id/valueUnit" 
				            style="@style/MatchWrap"
				            android:textColor="@color/color_999999"
				            android:textSize="22sp"
				            android:textStyle="bold"/>
			        </LinearLayout>
			        
			        <LinearLayout 
			            style="@style/ItemLine">
			            <TextView 
				            style="@style/WrapWrap"
				            android:text="@string/text_department"
				            android:textSize="22sp"
				            android:textColor="@color/color_999999"
				            android:textStyle="bold"/>
				        <EditText
				            android:id="@+id/valueDepartment" 
				            style="@style/MatchWrap"
				            android:textColor="@color/color_999999"
				            android:textSize="22sp"
				            android:textStyle="bold"/>
			        </LinearLayout>
			        
			        <LinearLayout 
			            style="@style/ItemLine">
			            <TextView 
				            style="@style/WrapWrap"
				            android:text="@string/text_position"
				            android:textSize="22sp"
				            android:textColor="@color/color_999999"
				            android:textStyle="bold"/>
				        <EditText
				            android:id="@+id/valuePosition" 
				            style="@style/MatchWrap"
				            android:textColor="@color/color_999999"
				            android:textSize="22sp"
				            android:textStyle="bold"/>
			        </LinearLayout>
			        
			        
				</LinearLayout>
			</ScrollView>
			<Button android:id="@+id/submitBtn"
			            android:gravity="center"
			            android:layout_marginTop="15dp"
			            style="@style/ItemLine"
			            android:text="@string/submit"
			            android:background="@drawable/botton_round_blue"
			            android:textColor="@color/white"/>
		</LinearLayout>
    </LinearLayout>
    <TextView android:id="@+id/warn_view"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="12.0dip"
	    android:text=""
	    android:gravity="center"
	    android:textColor="@color/white"
	    android:textSize="16sp"
	    android:background="#ffd62d2d"
	    android:visibility="gone"/>
	<TextView android:id="@+id/info_view"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="12.0dip"
	    android:text=""
	    android:gravity="center"
	    android:textColor="@color/white"
	    android:textSize="16sp"
	    android:background="#ff18d38a"
	    android:visibility="gone"/>
</RelativeLayout>
