<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:orientation="vertical" android:background="@color/color_EEEEEE" android:layout_width="fill_parent" android:layout_height="fill_parent">
    <include layout="@layout/view_title_bar" />
    <View android:layout_marginTop="18.0dip" style="@style/Line" />
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="108.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="54.0dip">
            <ImageView android:id="@+id/icon_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_username" android:layout_centerVertical="true" />
            <EditText android:textSize="18.0sp" android:id="@+id/username" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="13.5dip" android:hint="@string/input_username" android:singleLine="true" android:layout_toRightOf="@id/icon_username" />
        </RelativeLayout>
        <View style="@style/Line" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="54.0dip">
            <ImageView android:id="@+id/icon_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_password" android:layout_centerVertical="true" />
            <EditText android:textSize="18.0sp" android:id="@+id/password" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="13.5dip" android:hint="@string/input_password" android:singleLine="true" android:layout_toRightOf="@id/icon_password" android:inputType="textPassword" android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ"/>
        </RelativeLayout>
    </LinearLayout>
    <View style="@style/Line" />
    <Button android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@+id/login" android:background="@drawable/botton_round_blue" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="12.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="12.0dip" android:text="@string/login" />
</LinearLayout>
<TextView android:id="@+id/warn_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="12.0dip"
    android:text=""
    android:gravity="center"
    android:textColor="@color/white"
    android:textSize="16sp"
    android:background="#ffd62d2d"
    android:visibility="gone"/>
<TextView android:id="@+id/info_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="12.0dip"
    android:text=""
    android:gravity="center"
    android:textColor="@color/white"
    android:textSize="16sp"
    android:background="#ff18d38a"
    android:visibility="gone"/>
</FrameLayout>